force-app/main/default/objects/smagicinteract__numberPlanList__mdt/smagicinteract__numberPlanList__mdt.object-meta.xml
<CustomObject>
    <label>numberPlanList</label>
    <pluralLabel>numberLists</pluralLabel>
</CustomObject>