force-app/main/default/objects/smagicinteract__numberPlanList__mdt/fields/smagicinteract__countryId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__countryId__c</fullName>
    <label>countryId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>