force-app/main/default/objects/smagicinteract__numberPlanList__mdt/fields/smagicinteract__Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Id__c</fullName>
    <label>Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>