force-app/main/default/objects/smagicinteract__numberPlanList__mdt/fields/smagicinteract__mobileNumberLength__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__mobileNumberLength__c</fullName>
    <label>mobileNumberLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>